@@ -1,5 +1,13 @@
 2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/agentes/exportdata.php, godmode/agentes/agent_manager.php,
+	godmode/reporting/map_builder.php, godmode/reporting/graph_builder.php,
+	godmode/alerts/alert_list.php: fix the bug that the div of autocomplete
+	don't show.
+	Fixes: 2856945
+
+2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/styles/pandora.css, godmode/alerts/alert_list.php: minor fixes
 	for styles warnings.
 
